--- a/InputBox.xaml
+++ b/InputBox.xaml
@@ -5,11 +5,19 @@
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition/>
-			<RowDefinition Height="45"/>
+			<RowDefinition Height="30" Name="rowInput"/>
 			<RowDefinition Height="35" />
 		</Grid.RowDefinitions>
 		<Label Name="lblDesc" Grid.Row="0"/>
-		<TextBox Name="txtInput" Grid.Row="1" Margin="10" />
+		<StackPanel  Grid.Row="1" Margin="10,5,10,0">
+			<StackPanel Orientation="Horizontal">
+				<Label Content="" FontWeight="Bold" Name="lblInput1" /><TextBox Name="txtInput" Text="Test" VerticalAlignment="Center" Width="190" />
+			</StackPanel>
+			<StackPanel Orientation="Horizontal" Margin="0,5">
+				<Label FontWeight="Bold"  Name="lblInput2" />
+				<TextBox Name="txtInput2" Text="best" VerticalAlignment="Center" Width="190" />
+			</StackPanel>
+		</StackPanel>
 		<Grid Grid.Row="2">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition />
