--- a/Options.xaml
+++ b/Options.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FSClient.Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="490" Width="550" Loaded="Window_Loaded" Closing="Window_Closing" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize" Icon="phone.ico">
+        Title="Options" Height="490" Width="620" Loaded="Window_Loaded" Closing="Window_Closing" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize" Icon="phone.ico">
 	<Window.Resources>
 		<Style x:Key="OptionHeaderStyle" TargetType="{x:Type TextBlock}">
 			<Setter Property="FontWeight" Value="Bold"/>
@@ -43,7 +43,8 @@
 				<Button Content="Reload Devices"  Height="23"  Name="btnReloadDevices"  Width="100" Click="btnReloadDevices_Click" TabIndex="50" />
 				<Button Content="Sofia Settings" Height="23" Name="btnSofiaSettings" Width="100" Margin="10,0,0,0" Click="btnSofiaSettings_Click" TabIndex="51" />
 				<Button Content="Event Socket Settings" Height="23" Name="btnEventSocketSettings" Width="125" Margin="10,0,0,0" Click="btnEventSocketSettings_Click" TabIndex="52" />
-				<Button Content="Plugin Settings" Height="23" Name="btnPluginSettings" Width="100" Margin="10,0,0,0" Click="btnPluginSettings_Click" TabIndex="53" />
+				<Button Content="Conference Settings" Height="23" Name="btnConferenceSettings" Width="125" Margin="10,0,0,0" Click="btnConferenceSettings_Click" TabIndex="53" />
+				<Button Content="Plugin Settings" Height="23" Name="btnPluginSettings" Width="100" Margin="10,0,0,0" Click="btnPluginSettings_Click" TabIndex="54" />
 			</StackPanel>
 			<TextBlock Grid.Row="1" Text="Headset Extras:" Style="{DynamicResource OptionHeaderStyle}" />
 			<ComboBox Height="23" Grid.Row="1" Grid.Column="1" Name="comboHeadsetDevice" Width="340" TabIndex="1" />
