--- a/Options.xaml
+++ b/Options.xaml
@@ -1,30 +1,28 @@
-﻿<Window x:Class="FSClient.Options"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="490" Width="620" Loaded="Window_Loaded" Closing="Window_Closing" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize" Icon="phone.ico">
+﻿<Window x:Class="FSClient.Options" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Title="Options" Width="620" Height="530"
+		Closing="Window_Closing" Icon="phone.ico" Loaded="Window_Loaded" ResizeMode="NoResize" WindowStyle="ThreeDBorderWindow">
 	<Window.Resources>
 		<Style x:Key="OptionHeaderStyle" TargetType="{x:Type TextBlock}">
-			<Setter Property="FontWeight" Value="Bold"/>
-			<Setter Property="FontSize" Value="15"/>
-			<Setter Property="VerticalAlignment" Value="Center"/>
-			<Setter Property="HorizontalAlignment" Value="Right"/>
+			<Setter Property="FontWeight" Value="Bold" />
+			<Setter Property="FontSize" Value="15" />
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="HorizontalAlignment" Value="Right" />
 		</Style>
 	</Window.Resources>
 	<Grid>
 
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="170"/>
-			<ColumnDefinition/>
+			<ColumnDefinition Width="170" />
+			<ColumnDefinition />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition />
-			<RowDefinition Height="110" />
+			<RowDefinition Height="125" />
 			<RowDefinition Height="30" />
 		</Grid.RowDefinitions>
 		<Grid Grid.ColumnSpan="2">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="170"/>
-				<ColumnDefinition/>
+				<ColumnDefinition Width="170" />
+				<ColumnDefinition />
 			</Grid.ColumnDefinitions>
 			<Grid.RowDefinitions>
 				<RowDefinition />
@@ -38,51 +36,64 @@
 				<RowDefinition />
 				<RowDefinition />
 				<RowDefinition />
+				<RowDefinition />
 			</Grid.RowDefinitions>
-			<StackPanel Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" >
-				<Button Content="Reload Devices"  Height="23"  Name="btnReloadDevices"  Width="100" Click="btnReloadDevices_Click" TabIndex="50" />
-				<Button Content="Sofia Settings" Height="23" Name="btnSofiaSettings" Width="100" Margin="10,0,0,0" Click="btnSofiaSettings_Click" TabIndex="51" />
-				<Button Content="Event Socket Settings" Height="23" Name="btnEventSocketSettings" Width="125" Margin="10,0,0,0" Click="btnEventSocketSettings_Click" TabIndex="52" />
-				<Button Content="Conference Settings" Height="23" Name="btnConferenceSettings" Width="125" Margin="10,0,0,0" Click="btnConferenceSettings_Click" TabIndex="53" />
-				<Button Content="Plugin Settings" Height="23" Name="btnPluginSettings" Width="100" Margin="10,0,0,0" Click="btnPluginSettings_Click" TabIndex="54" />
+			<StackPanel Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Orientation="Horizontal">
+				<Button Name="btnReloadDevices" Width="100" Height="23" Click="btnReloadDevices_Click" Content="Reload Devices" TabIndex="50" />
+				<Button Name="btnSofiaSettings" Width="100" Height="23" Margin="10,0,0,0" Click="btnSofiaSettings_Click" Content="Sofia Settings" TabIndex="51" />
+				<Button Name="btnEventSocketSettings" Width="125" Height="23" Margin="10,0,0,0" Click="btnEventSocketSettings_Click" Content="Event Socket Settings" TabIndex="52" />
+				<Button Name="btnConferenceSettings" Width="125" Height="23" Margin="10,0,0,0" Click="btnConferenceSettings_Click" Content="Conference Settings" TabIndex="53" />
+				<Button Name="btnPluginSettings" Width="100" Height="23" Margin="10,0,0,0" Click="btnPluginSettings_Click" Content="Plugin Settings" TabIndex="54" />
 			</StackPanel>
-			<TextBlock Grid.Row="1" Text="Headset Extras:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="1" Grid.Column="1" Name="comboHeadsetDevice" Width="340" TabIndex="1" />
+			<TextBlock Grid.Row="1" Style="{DynamicResource OptionHeaderStyle}" Text="Headset Extras:" />
+			<ComboBox Name="comboHeadsetDevice" Grid.Row="1" Grid.Column="1" Width="340" Height="23" TabIndex="1" />
 
-			<TextBlock Grid.Row="2" Text="Main Input:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="2" Grid.Column="1" Name="comboHeadsetInput" Width="340" TabIndex="2" />
+			<TextBlock Grid.Row="2" Style="{DynamicResource OptionHeaderStyle}" Text="Main Input:" />
+			<ComboBox Name="comboHeadsetInput" Grid.Row="2" Grid.Column="1" Width="340" Height="23" TabIndex="2" />
 
-			<TextBlock Grid.Row="3" Text="Main Output:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="3" Grid.Column="1" Name="comboHeadsetOutput" Width="340" TabIndex="3" />
+			<TextBlock Grid.Row="3" Style="{DynamicResource OptionHeaderStyle}" Text="Main Output:" />
+			<ComboBox Name="comboHeadsetOutput" Grid.Row="3" Grid.Column="1" Width="340" Height="23" TabIndex="3" />
 
-			<TextBlock Grid.Row="4" Text="Speakerphone Input:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="4" Grid.Column="1" Name="comboSpeakerInput" Width="340" TabIndex="4" />
-			<TextBlock Grid.Row="5" Text="Speakerphone Output:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="5" Grid.Column="1" Name="comboSpeakerOutput" Width="340" TabIndex="5" />
-			<TextBlock Grid.Row="6" Text="Ring Device:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="6" Grid.Column="1" Name="comboRingDevice" Width="340" TabIndex="6" />
-			<TextBlock Grid.Row="7" Text="On Incoming Call:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="7" Grid.Column="1" Name="comboOnIncomingCall" Width="340" TabIndex="6" />
-			<TextBlock Grid.Row="8" Text="Startup Layout:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="8" Grid.Column="1" Name="comboGUIStartup" Width="340" TabIndex="15" />
-			<TextBlock Grid.Row="9" Text="Theme:" Style="{DynamicResource OptionHeaderStyle}" />
-			<ComboBox Height="23" Grid.Row="9" Grid.Column="1" Name="comboTheme" Width="340" TabIndex="16" />
-			<TextBlock Grid.Row="10" Text="Recording Path:" Style="{DynamicResource OptionHeaderStyle}" />
-			<StackPanel Orientation="Horizontal" Grid.Row="11" Grid.Column="1">
-				<TextBox Height="23" Name="txtRecordingPath" Width="286" Margin="10,0" AutomationProperties.Name="Path to store recordings in" TabIndex="17" />
-				<Button Name="btnPathBrowse" Content="Browse" Height="25" Click="btnPathBrowse_Click"  AutomationProperties.Name="Browse for folder to store recordings in" TabIndex="18" />
+			<TextBlock Grid.Row="4" Style="{DynamicResource OptionHeaderStyle}" Text="Speakerphone Input:" />
+			<ComboBox Name="comboSpeakerInput" Grid.Row="4" Grid.Column="1" Width="340" Height="23" TabIndex="4" />
+			<TextBlock Grid.Row="5" Style="{DynamicResource OptionHeaderStyle}" Text="Speakerphone Output:" />
+			<ComboBox Name="comboSpeakerOutput" Grid.Row="5" Grid.Column="1" Width="340" Height="23" TabIndex="5" />
+			<TextBlock Grid.Row="6" Style="{DynamicResource OptionHeaderStyle}" Text="Ring Device:" />
+			<ComboBox Name="comboRingDevice" Grid.Row="6" Grid.Column="1" Width="340" Height="23" TabIndex="6" />
+			<TextBlock Grid.Row="7" Style="{DynamicResource OptionHeaderStyle}" Text="On Incoming Call:" />
+			<ComboBox Name="comboOnIncomingCall" Grid.Row="7" Grid.Column="1" Width="340" Height="23" TabIndex="6" />
+			<TextBlock Grid.Row="8" Style="{DynamicResource OptionHeaderStyle}" Text="Startup Layout:" />
+			<ComboBox Name="comboGUIStartup" Grid.Row="8" Grid.Column="1" Width="340" Height="23" TabIndex="15" />
+			<TextBlock Grid.Row="9" Style="{DynamicResource OptionHeaderStyle}" Text="Theme:" />
+			<ComboBox Name="comboTheme" Grid.Row="9" Grid.Column="1" Width="340" Height="23" TabIndex="16" />
+			<TextBlock Grid.Row="10" Style="{DynamicResource OptionHeaderStyle}" Text="Recording Path:" />
+			<StackPanel Grid.Row="10" Grid.Column="1" Orientation="Horizontal">
+				<TextBox Name="txtRecordingPath" Width="286" Height="23" Margin="10,0" AutomationProperties.Name="Path to store recordings in" TabIndex="17" />
+				<Button Name="btnPathBrowse" Height="25" AutomationProperties.Name="Browse for folder to store recordings in" Click="btnPathBrowse_Click" Content="Browse" TabIndex="18" />
+			</StackPanel>
+			<TextBlock Grid.Row="11" Style="{DynamicResource OptionHeaderStyle}" Text="Global Focus Hotkey:" />
+			<StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal"  Margin="10,0,0,0">
+				<CheckBox Name="chkGlobalCntrl" Content="Cntrl" VerticalAlignment="Center" TabIndex="19" />
+				<CheckBox Name="chkGlobalShift" Content="Shift" VerticalAlignment="Center" Margin="5,0,0,0" TabIndex="20" />
+				<CheckBox Name="chkGlobalAlt" Content="Alt" VerticalAlignment="Center"  Margin="5,0,0,0" TabIndex="21" />
+				<CheckBox Name="chkGlobalWin" Content="Win" VerticalAlignment="Center"  Margin="5,0,0,0" TabIndex="22"/>
+				<TextBox Name="txtHotKey" Width="23" Height="23" MaxLength="1"  Margin="5,0,0,0" TabIndex="23" />
+
 			</StackPanel>
 		</Grid>
 		<StackPanel Grid.Row="1" Grid.Column="1">
-			<CheckBox x:Name="chkIncomingBalloons" Content="Show Incoming Call Notification Balloons" VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="26" />
-			<CheckBox x:Name="chkClearDTMFS" Content="Clear Key Presses In Call Stats On Disconnect" VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="27" />
-			<CheckBox x:Name="chkUseNumbers" Content="Only Allow Numerical Input While Dialing" VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="28" />
-			<CheckBox x:Name="chkUpdatesOnStart" Content="Check for Updates on Startup"  VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="29" />
-			<CheckBox x:Name="chkNAT" Content="UPNP NAT Startup Check(slows startup 5-10s)"  VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="30" />
-			<CheckBox x:Name="chkDirectSip" Content="Direct SIP: Dialing"  VerticalAlignment="Center" FontWeight="Bold" FontSize="13.333" TabIndex="31" />
+			<CheckBox x:Name="chkIncomingBalloons" VerticalAlignment="Center" Content="Show Incoming Call Notification Balloons" FontSize="13.333" FontWeight="Bold" TabIndex="26" />
+			<CheckBox x:Name="chkClearDTMFS" VerticalAlignment="Center" Content="Clear Key Presses In Call Stats On Disconnect" FontSize="13.333" FontWeight="Bold" TabIndex="27" />
+			<CheckBox x:Name="chkUseNumbers" VerticalAlignment="Center" Content="Only Allow Numerical Input While Dialing" FontSize="13.333" FontWeight="Bold" TabIndex="28" />
+			<CheckBox x:Name="chkUpdatesOnStart" VerticalAlignment="Center" Content="Check for Updates on Startup" FontSize="13.333" FontWeight="Bold" TabIndex="29" />
+			<CheckBox x:Name="chkNAT" VerticalAlignment="Center" Content="UPNP NAT Startup Check(slows startup 5-10s)" FontSize="13.333" FontWeight="Bold" TabIndex="30" />
+			<CheckBox x:Name="chkDirectSip" VerticalAlignment="Center" Content="Direct SIP: Dialing" FontSize="13.333" FontWeight="Bold" TabIndex="31" />
+			<CheckBox x:Name="chkAlwaysOnTopDuringCall" VerticalAlignment="Center" Content="Window Always On Top During Call" FontSize="13.333" FontWeight="Bold" TabIndex="32" />
 		</StackPanel>
-		<Button Content="Save" Grid.Row="2" Height="23" HorizontalAlignment="Left" Margin="101,0,0,0" Name="btnSave" VerticalAlignment="Center" Width="75" Grid.ColumnSpan="2" Click="btnSave_Click" TabIndex="40" IsDefault="True" />
-		<Button Content="Cancel"  Grid.Column="1" Grid.Row="2" Height="23" HorizontalAlignment="Left" Margin="172,0,0,0" Name="btnCancel" VerticalAlignment="Center" Width="75" Click="btnCancel_Click" TabIndex="41" IsCancel="True" />
+		<Button Name="btnSave" Grid.Row="2" Grid.ColumnSpan="2" Width="75" Height="23" Margin="101,0,0,0"
+				HorizontalAlignment="Left" VerticalAlignment="Center" Click="btnSave_Click" Content="Save" IsDefault="True" TabIndex="40" />
+		<Button Name="btnCancel" Grid.Row="2" Grid.Column="1" Width="75" Height="23" Margin="172,0,0,0"
+				HorizontalAlignment="Left" VerticalAlignment="Center" Click="btnCancel_Click" Content="Cancel" IsCancel="True" TabIndex="41" />
 
 
 	</Grid>
